# Rusty_Reactone_TaskTracker

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/objects/: mod.rs
backend/src/objects/tasks_mod/: mod.rs  task.rs
backend/src/routes/: mod.rs
backend/src/routes/tasks/: get_tasks.rs  mod.rs
client/: package-lock.json  package.json
client/public/: manifest.json
client/src/: App.js  index.css
client/src/api/: index.js
client/src/api/axios/: index.js
client/src/api/modules/: tasks.api.js
client/src/components/common/: LeftMenu.css  LeftMenu.js
client/src/components/mainView/: MainView.css  MainView.js
client/src/components/task/: TaskTable.css  TaskTable.js
client/src/components/task/task-add-modal/: AddTaskModal.css  AddTaskModal.js
client/src/components/task/task-chip/: TaskChip.css  TaskChip.js
client/src/components/task/task-column/: TaskColumn.css  TaskColumn.js
client/src/components/task/task-edit/: EditTaskModal.js
client/src/components/task/task-modal/: AddTaskModal.css  AddTaskModal.js
client/src/services/: index.js
client/src/services/modules/: tasks_service.service.js
server/: Cargo.toml
server/src/: main.rs
server/src/database/: model.rs
server/src/objects/tasks_mod/: task.rs
server/src/routes/: mod.rs
server/src/routes/handlers/: tasks.rs
